--- a/app/Resources/views/Default/index.html.twig
+++ b/app/Resources/views/Default/index.html.twig
@@ -42,20 +42,20 @@
   <div class="panel panel-default blue">
     <div class="panel-heading"><h4 class="introfont">{{ 'news'|trans }}</h4></div>
     <div class="panel-body white">
-      <h3>HBO veut mettre fin au piratage</h3>
+      <h4 class="mt30p green-txt up-case">HBO veut mettre fin au piratage</h4>
       <p>
         Confrontée au téléchargement illégal massif de sa série phare, la chaîne câblée américaine HBO tente d'organiser
         la contre-attaque. Et s'apprête à prendre des "mesures extrêmes" pour stopper le piratage de Game of Thrones
         et arrêter les contrevenants...<a href="#">En savoir plus</a>
       </p>
-      <h3>Game of Thrones : on a vu l'épisode 4 !</h3>
+      <h4 class="mt30p green-txt up-case">Game of Thrones : on a vu l'épisode 4 !</h4>
       <p>
         Après "The Red Woman" et "Home", dont la fin n'a pas laissé grand monde indifférent, la saison 6 de Game of Thrones
         se poursuit avec "Oathbreaker" (que l'on peut traduire par "Le Briseur de serments").
         Diffusé sur la chaîne câblée HBO, mais est également proposé en H+24 sur OCS City,
         on débriefe avec vous cet épisode 3....<a href="#">En savoir plus</a>
       </p>
-      <h3>Aviez-vous remarqué ?</h3>
+      <h4 class="mt30p green-txt up-case">Aviez-vous remarqué ?</h4>
       <p>
         Aviez-vous remarqué ? Les petits détails cachés de House of Cards
         Les petits détails des plus grands films et séries, c'est dans "Aviez-vous remarqué ?",
