--- a/app/Resources/views/episode/new.html.twig
+++ b/app/Resources/views/episode/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block panel %} <!-- surcharge du block panel gauche -->
-  <ul class="nav nav-pills nav-stacked">
+  <ul class="nav nav-pills nav-stacked white">
     <li class="active">
-      <a href="/">{{ 'serie.show.home'|trans }}</a>
+      <a href="/" class="introfont blue">{{ 'serie.show.home'|trans }}</a>
     </li>
     <li>
-      <a href="{{ path('serie_show', { 'id': serie_id }) }}">{{ 'episode.show.back_serie'|trans }}</a>
+      <a href="{{ path('serie_show', { 'id': serie_id }) }}"class="grey-txt">{{ 'episode.show.back_serie'|trans }}</a>
     </li>
   </ul>
 {% endblock %}
