--- a/app/Resources/views/serie/edit.html.twig
+++ b/app/Resources/views/serie/edit.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block panel %} <!-- surcharge du block panel gauche -->
-  <ul class="nav nav-pills nav-stacked mt22p">
+  <ul class="nav nav-pills nav-stacked white">
     <li class="active">
-      <a href="/">{{ 'serie.show.home'|trans }}</a>
+      <a class="introfont blue" href="/">{{ 'serie.show.home'|trans }}</a>
     </li>
     <li>
-      <a data-toggle="tab" href="{{ path('serie_index') }}">{{ 'serie.show.back_list'|trans }}</a>
+      <a data-toggle="tab" href="{{ path('serie_index') }}" class="grey-txt">{{ 'serie.show.back_list'|trans }}</a>
     </li>
   </ul>
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'serie.edit.edit'|trans }}</h1>
+    <h2 class="mb20p grey-txt up-case">{{ 'serie.edit.edit'|trans }}</h2>
     <hr>
     {{ form_start(edit_form, {'method': 'post', 'action': path('serie_edit', { 'id': serie.id }), 'attr': {'class': 'form'}}) }}
     <div class="form-group">
