--- a/app/Resources/FOSMessageBundle/views/Message/newThread.html.twig
+++ b/app/Resources/FOSMessageBundle/views/Message/newThread.html.twig
@@ -28,7 +28,7 @@
     {% endif %}
       {{ form_widget(form.subject, {'attr': {'class': 'form-control mb20p', 'placeholder': 'Sujet'}}) }}
       {{ form_widget(form.body, {'attr': {'class': 'form-control textarea mb20p', 'placeholder': 'Message'}}) }}
-
+      {{ form_widget(form) }}
       <button type="submit" class="btn blue mb20p">{% trans from 'FOSMessageBundle' %}send{% endtrans %}</button>
   </form>
 
