--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -8,7 +8,7 @@
       <a href="/" class="introfont blue">{{ 'profile.show.home'|trans }}</a>
     </li>
     <li>
-      <a href="{{ path('new_message', { 'id': user.id }) }}">{{ 'send_message'|trans }}</a>
+      <a href="{{ path('new_message', { 'id': user.id }) }}">{{ 'profile.show.send_message'|trans }}</a>
     </li>
   </ul>
 {% endblock %}
