--- a/app/Resources/views/serie/edit.html.twig
+++ b/app/Resources/views/serie/edit.html.twig
@@ -6,7 +6,7 @@
       <a class="introfont blue" href="/">{{ 'serie.show.home'|trans }}</a>
     </li>
     <li>
-      <a data-toggle="tab" href="{{ path('serie_index') }}" class="grey-txt">{{ 'serie.show.back_list'|trans }}</a>
+      <a href="{{ path('serie_index') }}" class="grey-txt">{{ 'serie.show.back_list'|trans }}</a>
     </li>
   </ul>
 {% endblock %}
