--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -6,7 +6,7 @@
       <a class="introfont blue" href="/">{{ 'serie.show.home'|trans }}</a>
     </li>
     <li>
-      <a data-toggle="tab" href="{{ path('serie_index') }}" class="grey-txt">{{ 'serie.show.back_list'|trans }}</a>
+      <a href="{{ path('serie_index') }}" class="grey-txt">{{ 'serie.show.back_list'|trans }}</a>
     </li>
   </ul>
 {% endblock %}
@@ -71,10 +71,10 @@
       <div class="tab-content mt30p"> <!--  -->
         <div id="description" class="tab-pane fade in active lght-grey-txt">
           <p>Status:</p>
-          <p>{{ 'serie.show.nationality'|trans }}:</p>
+          <p>{{ 'serie.show.nationality'|trans }}: {{ serie.nationality }}</p>
           <p>{{ 'serie.show.number_of_season'|trans }}: {{ serie.season }}</p>
-          <p>{{ 'serie.show.director'|trans }}:</p>
-          <p>{{ 'serie.show.actors'|trans }}:</p>
+          <p>{{ 'serie.show.director'|trans }}: {{ serie.director }}</p>
+          <p>{{ 'serie.show.actors'|trans }}: {{ serie.actors }}</p>
         </div>
         {% for i in 1..serie.season %}
           <div id="season{{ i }}" class="tab-pane fade">
