--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -70,7 +70,7 @@
 
       <div class="tab-content mt30p"> <!--  -->
         <div id="description" class="tab-pane fade in active lght-grey-txt">
-          <p>Status:</p>
+          <p>Status: {{ serie.status }}</p>
           <p>{{ 'serie.show.nationality'|trans }}: {{ serie.nationality }}</p>
           <p>{{ 'serie.show.number_of_season'|trans }}: {{ serie.season }}</p>
           <p>{{ 'serie.show.director'|trans }}: {{ serie.director }}</p>
