--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -37,6 +37,10 @@
 {% endblock %}
 
 {% block body %}
+{% stylesheets
+    "@IdeatoStarRatingBundle/Resources/public/jquery.raty.css" filter="cssrewrite" %}
+<link rel="stylesheet" href="{{ asset_url }}" />
+{% endstylesheets %}
 <div class="p20p30p">
   <div class="row"><!-- contenu -->
     <div class="col-sm-4 col-xs-12 mb20p">
