--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -4,13 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>{% block title %}Hub Series{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ asset('css/colorGuide.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/carousel.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/formModal.css') }}">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+        {% stylesheets
+            "css/colorGuide.css"
+            "css/custom.css"
+            "css/carousel.css"
+            "css/formModal.css"
+            "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+            "http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"
+            "@IdeatoStarRatingBundle/Resources/public/jquery.raty.css" filter="cssrewrite"
+        %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="{{ asset('css/modernizr-custom.js') }}"></script>
         <link rel="icon" type="image/x-icon" href="{{ asset('mini.png') }}" /> <!-- Icone d'onglet a revoir -->
