--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" href="{{ asset('css/starraty.css') }}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="{{ asset('js/jquery.starrating.js') }}">
         <link rel="icon" type="image/x-icon" href="{{ asset('mini.png') }}" /> <!-- Icone d'onglet a revoir -->
     </head>
     <body>
