--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -106,8 +106,8 @@
 
       <!-- chargement du JS -->
       {% javascripts
-        'js/jquery.raty.js'
-        'js/jquery.starrating.js'
+        'bundles/ideatostarrating/jquery.raty.js'
+        'bundles/ideatostarrating/jquery.starrating.js'
         'js/ajaxServices.js'
       %}
       <script type="text/javascript" src="{{ asset_url }}"></script>
