--- a/app/Resources/FOSMessageBundle/views/Message/inbox.html.twig
+++ b/app/Resources/FOSMessageBundle/views/Message/inbox.html.twig
@@ -11,6 +11,9 @@
     <li>
       <a href="{{ url('fos_message_sent') }}" class="grey-txt">{% trans from 'FOSMessageBundle' %}sent{% endtrans %}</a>
     </li>
+    <li>
+      <a href="{{ url('fos_message_deleted') }}" class="grey-txt">{% trans from 'FOSMessageBundle' %}deleted{% endtrans %}</a>
+    </li>
   </ul>
 {% endblock %}
 
