--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -10,6 +10,9 @@
     <li>
       <a href="{{ path('new_message', { 'id': user.id }) }}">{{ 'profile.show.send_message'|trans }}</a>
     </li>
+    <li>
+      <a href="{{ path('fos_user_profile_edit')}}">{{ 'profile.show.edit'|trans }}</a>
+    </li>
   </ul>
 {% endblock %}
 
@@ -42,5 +45,28 @@
         {% endfor %}
       </div>
     </div>
+    Signaler&nbsp;
+    <button id="signal" class="no-border"><i class="fa fa-exclamation-circle" aria-hidden="true"></i></button>
+    <script type="text/javascript">
+
+      $('#signal').off().on("click", function()
+      {
+        /**
+        * Ajax request for signaled comment
+        *
+        * @data :id
+        */
+        $.ajax(
+          {
+            url:"{{ path('admin_users', { 'id':  user.id }) }}",
+            success: function(data){
+              $("#signal").html('<i class="fa fa-check" aria-hidden="true"></i>');
+            },
+            error: function(error){
+            }
+          }
+        );
+      });
+    </script>
   </div>
 {% endblock %}
