--- a/app/Resources/views/includes/navbar.html.twig
+++ b/app/Resources/views/includes/navbar.html.twig
@@ -110,7 +110,7 @@
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
-    <form action="/search/results" method="get" class="ui-widget form-inline">
+    <form action="{{ path('results') }}" method="get" class="ui-widget form-inline">
       <div id="search_bar">
         <label for="tags"></label>
         <input id="tags" class="col-md-8 col-md-push-2 col-xs-10 search-bar" name="q" placeholder="Search..." />
