--- a/app/Resources/FOSMessageBundle/views/Message/deleted.html.twig
+++ b/app/Resources/FOSMessageBundle/views/Message/deleted.html.twig
@@ -1,9 +1,30 @@
 {% extends 'FOSMessageBundle::layout.html.twig' %}
 
+{% block panel %}
+  <ul class="nav nav-pills nav-stacked white">
+    <li class="active">
+      <a href="/" class="introfont blue">{{ 'serie.show.home'|trans }}</a>
+    </li>
+    <li>
+      <a href="{{ url('fos_message_inbox') }}" class="grey-txt">{% trans from 'FOSMessageBundle' %}inbox{% endtrans %}</a>
+    </li>
+    <li>
+      <a href="{{ url('fos_message_thread_new' )}}" class="grey-txt">{% trans from 'FOSMessageBundle' %}send_new{% endtrans %}</a>
+    </li>
+    <li>
+      <a href="{{ url('fos_message_sent') }}" class="grey-txt">{% trans from 'FOSMessageBundle' %}sent{% endtrans %}</a>
+    </li>
+  </ul>
+{% endblock %}
+
 {% block fos_message_content %}
 
-<h2>{% trans from 'FOSMessageBundle' %}deleted{% endtrans %}</h2>
+<div class="p20p30p">
 
-{% include 'FOSMessageBundle:Message:threads_list.html.twig' with {'threads': threads} %}
+  <h2 class="up-case lght-grey-txt mb20p">{% trans from 'FOSMessageBundle' %}deleted{% endtrans %}</h2>
+
+  {% include 'FOSMessageBundle:Message:threads_list.html.twig' with {'threads': threads} %}
+
+</div>
 
 {% endblock %}
