--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
         <link rel="stylesheet" href="{{ asset('css/carousel.css') }}">
         <link rel="stylesheet" href="{{ asset('css/formModal.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/jquery.raty.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" href="{{ asset('css/starraty.css') }}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <link rel="icon" type="image/x-icon" href="{{ asset('mini.png') }}" /> <!-- Icone d'onglet a revoir -->
     </head>
