--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="bundles/ideatostarrating/jquery.raty.js"></script>
+        <script src="bundles/ideatostarrating/jquery.starrating.js"></script>
         <link rel="icon" type="image/x-icon" href="{{ asset('mini.png') }}" /> <!-- Icone d'onglet a revoir -->
     </head>
     <body>
